--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="../Tharush-portfolio/src/App.jsx"></script>
+    <script type="module" src="./src/App.jsx"></script>
   </body>
 </html>
